# View-tracker-

./: .commit_msg.txt  .gitignore  TICKETS_DEPLOY.md  migration_approved_for_pages.sql  migration_bandwidth_fields.sql  migration_deadlines.sql  migration_fix_rls.sql  migration_idea_cs_optional.sql  migration_idea_engine.sql  migration_idea_engine_safe.sql  migration_idea_fields.sql  migration_kalakar_link.sql  migration_killed_fields.sql  migration_scheduling.sql  migration_user_roles.sql  schema.sql
migrations/: backfill_tracker_idea_comp_link_from_link.sql  tickets_v1.sql  (+21 more)
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/app/: auth.py  config.py  main.py
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/app/database/: client.py  models.py
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/app/database/repositories/: content_strategists.py  dashboard_views.py  ideas.py  pages.py  posts.py  reels.py
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/app/schemas/: request.py  response.py
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/app/services/: chat_service.py
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/app/services/apify/: __init__.py  base.py  instagram.py  profile_scraper.py
snoboard-backend-feature-frontseat/snoboard-backend-feature-frontseat/scripts/: process_scrape_queue.py
(+60 files in other folders)
